<resources>
    <string name="app_name">Interruptions Locale Plugin</string>

    <string name="notification_access_title">Enable notification access</string>
    <string name="notification_access_message">You have to enable notification access. Press OK and check the list entry of this app</string>

    <string name="last_zen_state">Last known interruption state: %s</string>
    <string name="zen_state_all">Set to all</string>
    <string name="zen_state_priority">Set to priority</string>
    <string name="zen_state_none">Set to none</string>
    <string name="current_state_all">all</string>
    <string name="current_state_priority">priority</string>
    <string name="current_state_none">none</string>
    <string name="current_state_unknown">unknown</string>

    <string name="select_setting">Which interruption setting should be activated upon firing this plugin?</string>
    <string name="locale_blurb_update_zen_mode">Update interruption setting to: %s</string>
    <string name="button_accept_settings">Finished</string>
</resources>
