<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.github.nohum.com.github.nohum.localezenmode.EditSettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_setting"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/mode_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zen_state_all"
            android:padding="8dp"
            android:layout_marginBottom="8dp" />

        <RadioButton
            android:id="@+id/mode_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zen_state_priority"
            android:padding="8dp"
            android:layout_marginBottom="8dp" />

        <RadioButton
            android:id="@+id/mode_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zen_state_none"
            android:padding="8dp"
            android:layout_marginBottom="8dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_finished"
        android:text="@string/button_accept_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
